--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ h6 {
 
 .card-img-top {
   margin: 10px;
+  min-width: 0;
+  width: 100%;
 }
 
 .portrait-bg {
@@ -87,8 +89,6 @@ a {
   color: #000;
   text-decoration: none;
 }
-
-/* header */
 
 .header {
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
@@ -169,7 +169,7 @@ a {
   top: -5px;
 }
 
-/* menu btn */
+/**********HAMBURGER******/
 
 .header .menu-btn {
   display: none;
@@ -199,7 +199,7 @@ a {
 a-scene {
   margin: auto;
   width: 100%;
-  height: 980px;
+  height: 500px;
 }
 
 /* 48em = 768px */
